# se-toolkit-lab-7

./: .env.bot.example  README.md  docker-compose.yml
backend/: Dockerfile
backend/app/: etl.py
bot/: .dockerignore  Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml  run_test.sh
bot/handlers/: commands.py
bot/services/: intent_router.py  llm_client.py  lms_client.py
wiki/: api.md
